<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2018
  ~ Copyright (c) Hendercine Productions and James Henderson 2018.
  ~ All rights reserved.
  ~
  ~ Last modified 5/21/18 2:29 PM
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/about_nav"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about_nav_title"
            app:showAsAction="ifRoom|always|collapseActionView"/>
        <item
            android:id="@+id/program_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/program_nav_title"/>
        <item
            android:id="@+id/lyrics_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/lyrics_nav_title"/>
        <item
            android:id="speaker_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/future_assemblies_nav_title"/>
        <item
            android:id="@+id/help_often_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/help_often_nav_title"/>
        <item
            android:id="@+id/live_better_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/live_better_nav_title"/>
        <item
            android:id="chat_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/salamander_chat_nav_title"/>
        <item
            android:id="@+id/insta_link_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/instagram_nav_title"/>
        <item
            android:id="@+id/facebook_link_nav"
            android:icon="@drawable/com_facebook_favicon_blue"
            android:title="@string/facebook_nav_title"/>
        <item
            android:id="@+id/twitter_link_nav"
            android:icon="@drawable/tw__ic_logo_default"
            android:title="@string/twitter_nav_title"/>
        <item
            android:id="@+id/site_link_nav"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/sala_on_the_web_nav_title"/>
    </group>

</menu>