<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2018
  ~ Copyright (c) Hendercine Productions and James Henderson 2018.
  ~ All rights reserved.
  ~
  ~ Last modified 5/21/18 1:08 PM
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mission_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_mission_header"/>

    <TextView
        android:id="@+id/mission_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_statement"/>

    <TextView
        android:id="@+id/together_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/together_we_will_header"/>

    <TextView
        android:id="@+id/together_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_help_wonder"/>

    <TextView
        android:id="@+id/the_assembly_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_sunday_assembly_header"/>

    <TextView
        android:id="@+id/the_assembly_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_assembly_body_text"/>
</LinearLayout>
