<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2018
  ~ Copyright (c) Hendercine Productions and James Henderson 2018.
  ~ All rights reserved.
  ~
  ~ Last modified 5/21/18 1:55 PM
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ChatFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clipToPadding="true"
        android:divider="@android:color/transparent"
        android:scrollbars="vertical"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toTopOf="@+id/chat_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_chat">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/chat_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_recycler_view"
        >

        <ImageButton
            android:id="@+id/photo_picker_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/choose_a_photo_to_send"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/type_your_message_here"
            android:inputType="text"/>

        <Button
            android:id="@+id/chat_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/send"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>